[package]
name = "akasa-sentinel"
version = "1.0.0"
authors = ["Siptruk"]
edition = "2024"
license = "GPL-3.0-only"
description = "A high-performance, self-sovereign Monero payment gateway with zero-knowledge architecture and Tor support."

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
monero = "0.20.0"
hex = "0.4"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
hmac = "0.12"
sha2 = "0.10"
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
